Harden .gitignore: add security patterns for secrets, credentials, and Claude Code settings

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,29 @@
+# ============================================================
+# Security (Critical) — NEVER commit these
+# ============================================================
+.env
+.env.local
+.env.*.local
+!.env.example
+secrets.toml
+secrets.yaml
+secrets.json
+*credentials*
+**/*.pem
+**/*.key
+
+# ============================================================
+# Claude Code
+# ============================================================
+.claude/
+
+# ============================================================
 # Data Protection
+# ============================================================
 data/
 temp_data/
 RESULTS/
+results/
 *.xlsx
 *.xlsm
 *.csv
@@ -9,16 +31,59 @@ RESULTS/
 # Exception: Sample models for testing (allow these to be pushed)
 !sample_models/*.xlsx
 
+# ============================================================
 # Logs
+# ============================================================
 audit_history.csv
 audit_history.log
+*.log
 
+# ============================================================
 # Python
+# ============================================================
 __pycache__/
-*.pyc
-.DS_Store
+*.py[cod]
+*$py.class
+*.so
+build/
+dist/
+*.egg-info/
+*.egg
 
-# Environment variables (API keys - NEVER commit these)
-.env
-.env.local
-.env.*.local
+# ============================================================
+# Virtual environments
+# ============================================================
+venv/
+.venv/
+env/
+
+# ============================================================
+# IDE / Editor
+# ============================================================
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# ============================================================
+# OS generated
+# ============================================================
+.DS_Store
+.DS_Store?
+._*
+Thumbs.db
+
+# ============================================================
+# Jupyter
+# ============================================================
+.ipynb_checkpoints/
+
+# ============================================================
+# Internal / working documents (not for public repo)
+# ============================================================
+bdschi1?notes/
+Fundamental.md
+fundamental.md
+b-notes.md
+TECHNICAL_DOCUMENTATION.md
