--- a/.gitignore
+++ b/.gitignore
@@ -45,10 +45,12 @@ __pycache__/
 *.py[cod]
 *$py.class
 *.so
+*.whl
 build/
 dist/
 *.egg-info/
 *.egg
+.eggs/
 
 # ============================================================
 # Virtual environments
@@ -56,6 +58,16 @@ dist/
 venv/
 .venv/
 env/
+
+# ============================================================
+# Testing / Linting
+# ============================================================
+.pytest_cache/
+.ruff_cache/
+.mypy_cache/
+.coverage
+htmlcov/
+.tox/
 
 # ============================================================
 # IDE / Editor
