Refine cross-repo linkages, shared infrastructure, and scoring capabilities

--- a/builder/templates/comps_peers.yaml
+++ b/builder/templates/comps_peers.yaml
@@ -1,6 +1,6 @@
 sectors:
   Technology:
-    mega_cap: [AAPL, MSFT, GOOGL, META, AMZN]
+    mega_cap: [AAPL, MSFT, AMZN, NVDA, AVGO]
     large_cap: [CRM, ADBE, NOW, INTU]
   Healthcare:
     mega_cap: [JNJ, UNH, LLY, PFE, ABBV]
